# FinalDH/model/turno.go
@@ -1,10 +1,10 @@
 package models
 
-// Turno representa un turno con un dentista y paciente.
+// Turno represents a dental appointment
 type Turno struct {
-	ID          int      `json:"id"`
-	FechaHora   string   `json:"fecha_hora"`
-	Descripcion string   `json:"descripcion"`
-	DentistaID  int      `json:"dentista_id"`
-	PacienteID  int      `json:"paciente_id"`
+    ID          int    `json:"id"`
+    FechaHora   string `json:"fecha_hora"`
+    Descripcion string `json:"descripcion"`
+    DentistaID  int    `json:"dentista_id"`
+    PacienteID  int    `json:"paciente_id"`
 }
